# interpretation-of-english-articles

./: .gitignore  .impeccable.md  MEMORY.md  README.md  RTK.md  docker-compose.local.yml  skills-lock.json
server/: .env.example  ARCHITECTURE.md  README.md  pyproject.toml
server/.cache/dictionary/: and.json  ecdict.db  food.json  including.json  near.json  prices.json  will.json  worldwide.json
server/app/: __init__.py  main.py
server/app/agents/: annotation.py  core_v0.py  grammar_agent.py  model_factory.py  preprocess_v0.py  repair_agent.py  translation_agent.py  translation_v0.py  vocabulary_agent.py
server/app/api/: router.py
server/app/api/routes/: analyze.py  auth.py  dict.py  favorites.py  health.py  preprocess.py  quota.py  records.py  tasks.py  vocabulary.py
server/app/config/: settings.py
server/app/database/: __init__.py  connection.py  session.py
server/app/llm/: agent_runner.py  model_selection.py  provider_factory.py  registry.py  router.py  routes.py  runtime.py  types.py
server/app/observability/: __init__.py  langsmith.py
server/app/schemas/: __init__.py  analysis.py  common.py  preprocess.py  tasks.py
server/app/schemas/internal/: __init__.py  analysis.py  drafts.py  normalized.py
server/app/schemas/user_assets/: __init__.py  favorites.py  records.py  vocabulary.py
server/app/services/analysis/: __init__.py  anchor_resolution.py  article.py  credit_service.py  draft_validators.py  example_strategy.py  fallbacks.py  input_preparation.py  normalize_and_ground.py  policy.py  projection.py  prompt_composer.py  prompt_strategy.py  result_assembly.py  result_builder.py  runners.py  strategy_builder.py  task_executor.py  task_service.py  user_rules.py  (+1 more)
server/app/workflow/: analyze.py  analyze_helpers.py  analyze_nodes.py  analyze_state.py  preprocess.py  preprocess_helpers.py  preprocess_nodes.py  preprocess_state.py  tracing.py
server/db/migrations/: 0001_initial_schema.sql  0002_ecdict_unique_constraints.sql  0002_task_center_and_credits.sql
server/scripts/: import_ecdict.py  import_tecd3.py  regression_suite.py
server/tests/: test_analyze_workflow.py  test_annotation_schema.py  test_dict_lemma_fallback.py  test_dict_proxy.py  test_dict_tecd3.py  test_health.py  test_langsmith_observability.py  test_model_factory.py  test_normalize_and_ground.py  test_prepare_input_regression.py  test_preprocess_schema.py  test_preprocess_workflow.py  test_projection.py  test_prompt_composition.py  test_task_center.py  test_tecd3_import.py
server/tests/auth/: test_auth_routes.py  test_wechat_login.py
(+159 files in other folders)
